--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "start": "node server.js",
         "server": "nodemon server.js",
         "client": "npm start --prefix ./client",
-        "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "build": "node build.js"
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "keywords": [],
     "author": "Techinfoyt",
